refactor: rename mod.tsx

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --allow-net --allow-write --allow-read --allow-env --watch mod.tsx",
+    "dev": "deno run --allow-net --allow-write --allow-read --allow-env --watch main.ts",
     "sql-gen": "deno run command.ts",
     "fmt": "deno fmt --ignore=README.md"
   }
