--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,6 +2,7 @@
   "tasks": {
     "dev": "deno run --allow-net --allow-write --allow-read --allow-env --watch main.ts",
     "sql-gen": "deno run command.ts",
+    "test": "deno test --allow-read --allow-env --no-check",
     "fmt": "deno fmt --ignore=README.md"
   }
 }
