--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,4 @@
 {
   "deno.enable": true,
-  "deno.unstable": true,
-  "editor.defaultFormatter": "denoland.vscode-deno",
-  "editor.formatOnSave": true,
-  "[markdown]": {
-    "editor.formatOnSave": false
-  }
+  "deno.unstable": true
 }
