chore: update fmt command

--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,6 @@
   "tasks": {
     "start": "deno run -A --watch=static/,routes/ dev.ts",
     "test": "deno test --allow-read --allow-env --no-check",
-    "fmt": "deno fmt --ignore=README.md",
     "archives": "deno run --allow-net=aws.connect.psdb.cloud --allow-write=sql/ --allow-read=.env,.env.defaults,.env.example,sql/ --allow-env scripts/archives-insert-data.ts"
   },
   "lock": false,
@@ -10,5 +9,8 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
+  },
+  "fmt": {
+    "exclude": ["README.md"]
   }
 }
