--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Lint
         run: deno lint
       - name: Format Check
-        run: deno task fmt --check
+        run: deno fmt --check
       - name: Test
         run: deno task test
