--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,7 @@
   "tasks": {
     "start": "DEVELOP=true deno run -A --watch=static/,routes/ dev.ts",
     "test": "deno test --allow-read --allow-env --no-check",
-    "archives": "deno run --allow-net=aws.connect.psdb.cloud --allow-write=sql/ --allow-read=.env,.env.defaults,.env.example,sql/ --allow-env scripts/archives-insert-data.ts"
+    "archives": "deno run --allow-net=aws.connect.psdb.cloud --allow-write=db/sql/ --allow-read=.env,.env.defaults,.env.example,db/sql/ --allow-env scripts/archives-insert-data.ts"
   },
   "lock": false,
   "importMap": "./import_map.json",
