--- a/deno.json
+++ b/deno.json
@@ -1,18 +1,44 @@
 {
   "tasks": {
     "start": "DEVELOP=true deno run -A --watch=static/,routes/ dev.ts",
+    "build": "deno run -A dev.ts build",
+    "preview": "deno run -A main.ts",
     "test": "deno test --allow-read --allow-env --no-check",
     "dump": "deno run --allow-run=pscale --allow-env scripts/db-dump.ts",
     "dump:main": "DATABASE_BRANCH=main deno task dump",
-    "dump:dev": "DATABASE_BRANCH=develop deno task dump"
+    "dump:dev": "DATABASE_BRANCH=develop deno task dump",
+    "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
   "lock": false,
-  "importMap": "./import_map.json",
+  "imports": {
+    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
+    "preact": "https://esm.sh/preact@10.15.1",
+    "preact/": "https://esm.sh/preact@10.15.1/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
+    "twind": "https://esm.sh/twind@0.16.19",
+    "twind/": "https://esm.sh/twind@0.16.19/",
+    "std/": "https://deno.land/std@0.182.0/",
+    "planetscale": "https://esm.sh/@planetscale/database@1.10.0",
+    "icons/": "https://deno.land/x/tabler_icons_tsx@0.0.3/tsx/",
+    "$hono/": "https://deno.land/x/hono@v3.3.4/",
+    "drizzle-orm": "https://esm.sh/drizzle-orm@0.27.2",
+    "drizzle-orm/planetscale-serverless": "https://esm.sh/drizzle-orm@0.27.2/planetscale-serverless",
+    "drizzle-orm/mysql-core": "https://esm.sh/drizzle-orm@0.27.2/mysql-core",
+    "drizzle-zod": "https://esm.sh/drizzle-zod@0.4.4"
+  },
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
   },
   "fmt": {
-    "exclude": ["README.md"]
+    "exclude": ["README.md", "_fresh"]
+  },
+  "lint": {
+    "rules": {
+      "tags": ["fresh", "recommended"]
+    },
+    "exclude": ["_fresh"]
   }
 }
