--- a/deno.json
+++ b/deno.json
@@ -16,16 +16,15 @@
     "@preact/signals": "npm:@preact/signals@1.1.3",
     "@preact/signals-core": "npm:@preact/signals-core@1.2.3",
     "drizzle-orm": "npm:drizzle-orm@0.27.2",
+    "drizzle-orm/": "npm:/drizzle-orm@0.27.2/",
     "drizzle-zod": "npm:drizzle-zod@0.4.4",
     "icons/": "https://deno.land/x/tabler_icons_tsx@0.0.3/tsx/",
     "mysql2": "npm:mysql2@3.9.2",
     "preact": "npm:preact@10.15.1",
     "preact-render-to-string": "npm:preact-render-to-string@6.2.1",
-    "preact/debug": "npm:preact@10.15.1/debug",
-    "preact/hooks": "npm:preact@10.15.1/hooks",
-    "preact/jsx-runtime": "npm:preact@10.15.1/jsx-runtime",
+    "preact/": "npm:/preact@10.15.1/",
     "twind": "npm:twind@0.16.19",
-    "twind/sheets": "npm:twind@0.16.19/sheets",
+    "twind/": "npm:/twind@0.16.19/",
     "~/": "./"
   },
   "compilerOptions": {
