--- a/deno.json
+++ b/deno.json
@@ -12,34 +12,25 @@
     "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
   "imports": {
-    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
+    "$fresh/": "https://deno.land/x/fresh@1.6.8/",
     "$hono/": "https://deno.land/x/hono@v3.3.4/",
     "$std/": "https://deno.land/std@0.182.0/",
-    "@preact/signals": "npm:@preact/signals@1.1.3",
-    "@preact/signals-core": "npm:@preact/signals-core@1.2.3",
+    "@preact/signals": "npm:@preact/signals@1.2.2",
+    "@preact/signals-core": "npm:@preact/signals-core@1.5.1",
     "drizzle-orm": "npm:drizzle-orm@0.27.2",
     "drizzle-orm/": "npm:/drizzle-orm@0.27.2/",
     "drizzle-zod": "npm:drizzle-zod@0.4.4",
     "icons/": "https://deno.land/x/tabler_icons_tsx@0.0.3/tsx/",
     "mysql2": "npm:mysql2@3.9.2",
-    "preact": "npm:preact@10.15.1",
+    "preact": "npm:preact@10.19.6",
     "preact-render-to-string": "npm:preact-render-to-string@6.2.1",
-    "preact/": "npm:/preact@10.15.1/",
+    "preact/": "npm:/preact@10.19.6/",
     "twind": "npm:twind@0.16.19",
     "twind/": "npm:/twind@0.16.19/",
     "~/": "./"
   },
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
-  },
-  "fmt": {
-    "exclude": ["README.md", "coverage", "_fresh"]
-  },
-  "lint": {
-    "rules": {
-      "tags": ["fresh", "recommended"]
-    },
-    "exclude": ["coverage", "_fresh"]
-  }
+  "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
+  "fmt": { "exclude": ["README.md"] },
+  "lint": { "rules": { "tags": ["fresh", "recommended"] } },
+  "exclude": ["**/_fresh/*", "coverage"]
 }
