--- a/deno.json
+++ b/deno.json
@@ -25,8 +25,9 @@
     "preact": "npm:preact@10.19.6",
     "preact-render-to-string": "npm:preact-render-to-string@6.2.1",
     "preact/": "npm:/preact@10.19.6/",
-    "twind": "npm:twind@0.16.19",
-    "twind/": "npm:/twind@0.16.19/",
+    "tailwindcss": "npm:tailwindcss@3.4.3",
+    "tailwindcss/": "npm:/tailwindcss@3.4.3/",
+    "tailwindcss/plugin": "npm:/tailwindcss@3.4.3/plugin.js",
     "~/": "./"
   },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
