--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "start": "DEVELOP=true deno run -A --watch=static/,routes/ dev.ts",
+    "start": "deno run -A --watch=static/,routes/ dev.ts",
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
     "test": "deno test --allow-read --allow-env --coverage=coverage",
@@ -10,37 +10,35 @@
     "dump": "deno run -E --env-file=.env --allow-run=tiup scripts/db-dump.ts",
     "dump:main": "DATABASE_BRANCH=main deno task dump",
     "dump:dev": "DATABASE_BRANCH=develop deno task dump",
+    "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
+    "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
+    "manifest": "deno task cli manifest $(pwd)",
     "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
+  "lock": false,
+  "nodeModulesDir": "auto",
+  "lint": { "rules": { "tags": ["fresh", "recommended"] } },
+  "exclude": ["**/_fresh/*", "README.md", "coverage", "drizzle"],
   "imports": {
-    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
+    "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "$hono/": "https://deno.land/x/hono@v3.3.4/",
-    "$std/": "https://deno.land/std@0.182.0/",
-    "@preact/signals": "npm:@preact/signals@1.1.3",
-    "@preact/signals-core": "npm:@preact/signals-core@1.2.3",
+    "$std/": "https://deno.land/std@0.224.0/",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "drizzle-orm": "npm:drizzle-orm@0.27.2",
     "drizzle-orm/": "npm:/drizzle-orm@0.27.2/",
     "drizzle-zod": "npm:drizzle-zod@0.4.4",
     "icons/": "https://deno.land/x/tabler_icons_tsx@0.0.3/tsx/",
     "mysql2": "npm:mysql2@3.9.2",
-    "preact": "npm:preact@10.15.1",
-    "preact-render-to-string": "npm:preact-render-to-string@6.2.1",
-    "preact/": "npm:/preact@10.15.1/",
-    "twind": "npm:twind@0.16.19",
-    "twind/": "npm:/twind@0.16.19/",
+    "preact": "https://esm.sh/preact@10.22.0",
+    "preact/": "https://esm.sh/preact@10.22.0/",
+    "tailwindcss": "npm:tailwindcss@3.4.1",
+    "tailwindcss/": "npm:/tailwindcss@3.4.1/",
+    "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js",
     "~/": "./"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
-  },
-  "fmt": {
-    "exclude": ["README.md", "coverage", "_fresh", "drizzle"]
-  },
-  "lint": {
-    "rules": {
-      "tags": ["fresh", "recommended"]
-    },
-    "exclude": ["coverage", "_fresh", "drizzle"]
   }
 }
