--- a/deno.json
+++ b/deno.json
@@ -18,11 +18,11 @@
     "$std/": "https://deno.land/std@0.182.0/",
     "@preact/signals": "npm:@preact/signals@1.1.3",
     "@preact/signals-core": "npm:@preact/signals-core@1.2.3",
-    "drizzle-orm": "npm:drizzle-orm@0.27.2",
-    "drizzle-orm/": "npm:/drizzle-orm@0.27.2/",
-    "drizzle-zod": "npm:drizzle-zod@0.4.4",
+    "@tidbcloud/serverless": "npm:@tidbcloud/serverless@^0.2.0",
+    "drizzle-orm": "npm:drizzle-orm@0.44.2",
+    "drizzle-orm/": "npm:/drizzle-orm@0.44.2/",
+    "drizzle-zod": "npm:drizzle-zod@0.8.2",
     "icons/": "https://deno.land/x/tabler_icons_tsx@0.0.3/tsx/",
-    "mysql2": "npm:mysql2@3.9.2",
     "preact": "npm:preact@10.15.1",
     "preact-render-to-string": "npm:preact-render-to-string@6.2.1",
     "preact/": "npm:/preact@10.15.1/",
