--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
 .DS_Store
-.env
 db/sql/dump_*/metadata
 db/sql/dump_*/*.sql
 !db/sql/dump_main_*/cinelog-schema-create.sql
 !db/sql/dump_main_*/*-schema.sql
 coverage/
 
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
 # Fresh build directory
 _fresh/
+
+# npm dependencies
+node_modules/
